/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
   * source/vm/dynlibhb.c
     - remove function hb_StartApp() and related _hInstance
   * source/vm/hvm.c
     - remove reference to hb_StartApp()
   * source/compiler/hbusage.c
     + add documentation of -gc3 switch

2001-12-30 08:00 UTC+0700 Andi Jahja <harbour@cbn.net.id>
   * source/compiler/cmdcheck.c
     + switch -gc3 => produce modiule with NO_START_UP

   * source/vm/genc.c
     + switch -gc3 now produce NO_START_UP codes.

   * source/vm/hvm.c
     - commented the use of hb_StartApp()

   * include/hbcomp.h
     + definition of HB_COMPGENC_NO_STARTUP

2001-12-28 22:53 UTC+0100 Patrick Mast <email@patrickmast.com>
   * contrib/apollo
     + Added function sx_GoBottom()
     + Added function sx_Go()
     + Added function sx_Seek()
     + Added function sx_SetSoftSeek()
     + Added function sx_RLock()
     + Added function sx_Reindex()
     + Added function sx_RecCount()
     + Added function sx_SetMemoBlockSize()
     + Added function sx_CreateNew()
     + Added function sx_CreateField()
     + Added function sx_CreateExec()
   * contrib/apollo/test
     * Added added functions in the test application.

2001-12-30 04:40 UTC+0700 Andi Jahja <harbour@cbn.net.id>
   * include/hbapi.h
     * declaration of exported functions in source/vm/extend.c and
       source/vm/arrays.c synchronized ( MSVC requirement )

2001-12-29 19:00 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
   * source/vm/maindllp.c
     * All extended function api implemented and started the array api
   + include/hbtypes.h
     * Header file for maindllp.c. Contain the typedef needed by maindllp.c
   * contrib/hbzlib/zipcomp.cpp
     * fixed an small error
   * utils/hbmake/hbmake.prg
     * some enhecements to select library code
   * source/vm/extend.c
     source/vm/arrays.c