@@ -84,9 +84,9 @@
 #include "hbpcode.h"
 #include "hbset.h"
 
-#if ( defined(HB_OS_WIN_32) && defined(__BORLANDC__) )
-   BOOL hb_StartApp( void ); /* placed at source/vm/dynlibhb.c */
-#endif
+// #if ( defined(HB_OS_WIN_32) && defined(__BORLANDC__) )
+//   BOOL hb_StartApp( void ); /* placed at source/vm/dynlibhb.c */
+// #endif
 
 #ifdef HB_MACRO_STATEMENTS
    #include "hbpp.h"
@@ -4309,9 +4309,9 @@ void HB_EXPORT hb_vmProcessSymbols( PHB_SYMB pModuleSymbols, USHORT uiModuleSymb
       hSymScope = ( pModuleSymbols + ui )->cScope;
       pNewSymbols->hScope |= hSymScope;
       if( ( ! s_pSymStart ) && ( hSymScope & HB_FS_FIRST && ! (  hSymScope & HB_FS_INITEXIT ) ) )
-         #if ( defined(HB_OS_WIN_32) && defined(__BORLANDC__) )
-            if( hb_StartApp() ) /* Are we calling this from the main application ? */
-         #endif
+         // #if ( defined(HB_OS_WIN_32) && defined(__BORLANDC__) )
+         //   if( hb_StartApp() ) /* Are we calling this from the main application ? */
+         // #endif
             s_pSymStart = pModuleSymbols + ui;  /* first public defined symbol to start execution */
 
       if( ( hSymScope == HB_FS_PUBLIC ) || ( hSymScope & ( HB_FS_MESSAGE | HB_FS_MEMVAR | HB_FS_FIRST ) ) )
